-- Added petrol Inline 4 series

*r14
Engines :
--Added Diesel & Petrol I6 series

--Retuned 9L v8; less torque, marginally more horsepower, and lighter in mass

*r15
Engines :
--Added Diesel v8 line, tweaked 20L to have a bit more torque and less horsepower, fixed some weights.

--Added new 6.5L diesel 6 sound.

*r16
Guns : 
--Added a further penalty to damage for projectiles that have insignificant penetration compared to the armour it is hitting, to prevent the sandpaper effect

--HP is now calculated from surface aera, as to less favor large, blocky props

--Explosion damage on heavily armoured props is now much more dependent on fragmentation effects than on pure blast

--APHE loses penetration more quickly when HE content is added

--HEAT now correctly loses HE filler based on the cone volume

--HEAT penetration efficiency is slightly higher

--Fixed and issue with explosion damage and large, lightweight props

--Fixed a bug with ricochets where the bullets would continue flight from the wrong position

--Unlinking gearboxes from wheels doesn't cause duplication issues anymore

Engines : 

--Dual-clutch gearboxes now have their full rated torque per clutch, but will slip if more than the rating of a single clutch is applied to the whole gearbox

*r17
Gearboxes :
--Added line of 1 speed, heavy duty gearboxes aimed at aircraft and marine uses

*r18
Guns :
-- Added Heavy Machinegun series, this encompasses 20, 30, and 40mm MGs; they are light and fast firing, but suffer in accuracy and ballistic performance, as they are meant for aircraft

-- Changed the 12.7 and 14.5 to have lower rates of fire and are more accurate, as well as a new sound

Engines :
--Balanced a lot of the petrol engines to be more stark from the diesels (diesels trade power for torque, and vice versa)

*r19
Guns : 
--Fixed a crash if an ammocrate was spawned but couldn't containt at least one round of ammo

--Fixed a bug that caused HEAT slugs to have an insanely high chance to ricochet